# mypython_packages

./: .gitignore  README.md  setup.cfg
mypackages/: calculate.py
src/: setup.py
src/mypackages/: calculate.py  greet.py
tests/: test.py
