[metadata]
name = mypackages-shahdarshil622
version = 0.0.1
author = Darshil Shah
author_email = shahdarshil622@gmail.com
description = A small package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shahdarshil123/mypython_packages 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src